# proc_gen_galaxy

./: Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs  time.rs  window.rs
src/space/: galaxy.rs  mod.rs  moon.rs  planet.rs  star.rs
