[package]
name = "procedural_gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_mt = "4.1.1"

[dependencies.sdl2]
version = "0.35"
default-features = false
# features = ["ttf","image","gfx","mixer"]
features = ["gfx"]
