[package]
name = "procedural_gen"
version = "0.1.0"
edition = "2021"
include = ["src/**/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.18.0"

[dependencies.sdl2]
version = "0.35"
default-features = false
# features = ["ttf","image","gfx","mixer"]
features = ["gfx"]
